app/temp_cache/errors.txt
file.c: In function ‘main’:
file.c:7:1: error: ‘dasafdf’ undeclared (first use in this function)
 dasafdf
 ^
file.c:7:1: note: each undeclared identifier is reported only once for each function it appears in
file.c:9:1: error: expected ‘;’ before ‘return’
 return 0;
 ^
